# bj7_game

./: .gitignore  AGENTS.md  BEVY.md  CLAUDE.md  Cargo.toml  GODOT.md  README.md  TODO.md  art.ase  build.rs  index.html
.github/workflows/: ci.yml  deploy-page.yaml  release-web.yaml
assets/: splash.ase
assets/aberrations/: types.ron
assets/defs/: dialog.ron  npcs.ron  types.ron
assets/dialog/: dialog_tree.ron
assets/dialogs/: dialog_tree.ron
assets/shaders/: aberration_distort.wgsl  palette_quantize.wgsl  palette_squeeze.wgsl
godot_sketch/: .gitignore  art.ase  art.ase.import  icon.svg.import  main.tscn  project.godot
godot_sketch/addons/curved_lines_2d/: plugin.cfg  video_explainer_tab.tscn
godot_sketch/models/: capsule.obj.import  cone.obj.import  cube.obj.import  cylinder.obj.import  icosphere.obj.import  plane.obj.import  pyramid.obj.import  sphere.obj.import  torus.obj.import
src/: aberration.rs  actor.rs  audio.rs  death.rs  dialog.rs  dispel.rs  environment.rs  health.rs  lib.rs  loading.rs  main.rs  menu.rs  palette.rs  pause.rs  player.rs  scaling.rs  transition.rs  world.rs
src/actions/: mod.rs
